--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -12,6 +12,7 @@
   align-items: center;
   justify-content: center;
   border-bottom: 1px solid darkgrey;
+  z-index: 4;
 }
 
 #loginButtons>button {
